@@ -3,6 +3,7 @@
 	  reduce recursion overhead.
 	* plugins/cfanim/cfanim.c: Refactored get_boolean() to not use strncmp(),
 	  since it was only checking the first character anyway.
+	* common/player.c: Changed a malloc() with a memset() to 0 into a calloc().
 
 2016-05-18  Daniel Hawkins
 	* common/map.c: Add new maps to the front of the mapstruct linked list
